--- a/app/src/main/res/layout/content_form_registration.xml
+++ b/app/src/main/res/layout/content_form_registration.xml
@@ -59,7 +59,7 @@
                         android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:imeOptions="actionNext"
-                        android:inputType="text"
+                        android:inputType="text|textCapWords"
                         android:padding="@dimen/min_padding" />
                 </LinearLayout>
 
@@ -83,7 +83,7 @@
                         android:background="@color/colorNearWhite"
                         android:ems="10"
                         android:imeOptions="actionNext"
-                        android:inputType="text"
+                        android:inputType="text|textCapWords"
                         android:padding="@dimen/min_padding" />
                 </LinearLayout>
 
