FireBase Account Reconnect

--- a/app/src/main/res/layout/message_list_view.xml
+++ b/app/src/main/res/layout/message_list_view.xml
@@ -23,34 +23,27 @@
 
             <ImageView
                 android:id="@+id/msg_thumb"
-                android:layout_width="@dimen/msg_thumb_width"
-                android:layout_height="@dimen/msg_thumb_height"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
-                android:background="@drawable/img" />
+                android:background="@drawable/ic_message_black_18dp" />
 
             <TextView
                 android:id="@+id/msg_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/min_padding"
-                android:layout_toRightOf="@id/msg_thumb"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                 android:text="-"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="@dimen/medium_text"
                 android:textStyle="bold" />
 
-
-            <TextView
-                android:id="@+id/msg_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/msg_title"
-                android:layout_toRightOf="@id/msg_thumb"
-                android:text="-"
-                android:textColor="@color/colorBlack"
-                android:textSize="@dimen/small_text" />
 
         </RelativeLayout>
 
