1. price check; 2. fee percentage; 3. testi UI; 4. driver assign status; 5. driver name on detail aset; 6. list chat show if member chat first;

--- a/app/src/main/res/layout/content_dompet.xml
+++ b/app/src/main/res/layout/content_dompet.xml
@@ -228,7 +228,7 @@
             android:id="@+id/btn_history_withdrawal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/credit_info"
+            android:layout_below="@+id/last_withdrawal"
             android:background="@drawable/radius_primary"
             android:clickable="true"
             android:layout_alignParentEnd="true"
