--- a/app/src/main/res/layout/activity_driver_assign.xml
+++ b/app/src/main/res/layout/activity_driver_assign.xml
@@ -5,14 +5,116 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorWhite"
     tools:context="id.rentist.mitrarentist.DriverAssignActivity">
 
-    <RelativeLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="@dimen/xmin_padding"
+        android:layout_marginStart="@dimen/min_padding"
+        android:layout_marginEnd="@dimen/min_padding"
+        android:background="@android:color/darker_gray" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-      >
+        android:orientation="vertical"
+        android:padding="@dimen/min_padding">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tipe Pengemudi"
+            android:textColor="@color/colorBlack"
+            android:textSize="12sp" />
+
+        <RadioGroup
+            android:id="@+id/driver_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/min_padding"
+            android:background="@color/colorNearWhite"
+            android:checkedButton="@+id/r_manual"
+            android:orientation="horizontal"
+            android:padding="@dimen/xmin_padding"
+            tools:ignore="UselessParent">
+
+            <RadioButton
+                android:id="@+id/r_driver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:buttonTint="@color/colorPrimary"
+                android:checked="true"
+                android:contextClickable="false"
+                android:text="Pengemudi" />
+
+            <RadioButton
+                android:id="@+id/r_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:buttonTint="@color/colorPrimary"
+                android:text="Delivery" />
+
+        </RadioGroup>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Daftar Pengemudi"
+            android:textColor="@color/colorBlack"
+            android:textSize="12sp" />
+
+        <com.github.ybq.android.spinkit.SpinKitView
+            android:id="@+id/progressBar"
+            style="@style/SpinKitView.FadingCircle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/btn_lmedium_height"
+            android:background="@color/colorNearWhite"
+            android:padding="@dimen/min_padding"
+            android:visibility="gone"
+            app:SpinKit_Color="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/driver_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"
+            android:textAlignment="center"
+            android:padding="@dimen/min_padding"
+            android:background="@color/colorNearWhite"
+            android:visibility="gone"
+            />
+
+        <TextView
+            android:id="@+id/user_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorBlack"
+            android:textAlignment="center"
+            android:padding="@dimen/min_padding"
+            android:background="@color/colorNearWhite"
+            android:visibility="gone"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/dr_driver"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorNearWhite"
+            android:padding="@dimen/xmin_padding"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/dr_user"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorNearWhite"
+            android:padding="@dimen/xmin_padding"
+            android:visibility="gone"/>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </LinearLayout>
