--- a/app/src/main/res/layout/content_form_motorcycle_aset.xml
+++ b/app/src/main/res/layout/content_form_motorcycle_aset.xml
@@ -261,17 +261,37 @@
                             android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
-                        <EditText
-                            android:id="@+id/as_year"
+                        <!--<EditText-->
+                            <!--android:id="@+id/as_year"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:background="@color/colorNearWhite"-->
+                            <!--android:ems="10"-->
+                            <!--android:hint="Tahun Produksi"-->
+                            <!--android:inputType="number"-->
+                            <!--android:maxLength="4"-->
+                            <!--android:padding="@dimen/min_padding"-->
+                            <!--android:text="" />-->
+
+
+
+
+                        <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:background="@color/colorNearWhite"
-                            android:ems="10"
-                            android:hint="Tahun Produksi"
-                            android:inputType="number"
-                            android:maxLength="4"
-                            android:padding="@dimen/min_padding"
-                            android:text="" />
+                            android:orientation="vertical"
+                            android:padding="@dimen/xmin_padding">
+
+                            <Spinner
+                                android:id="@+id/as_year"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:entries="@array/year_entries"
+                                android:padding="@dimen/xmin_padding"
+                                android:spinnerMode="dropdown" />
+
+                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
