--- a/app/src/main/res/layout/transaction_accept_view.xml
+++ b/app/src/main/res/layout/transaction_accept_view.xml
@@ -58,16 +58,15 @@
                 android:layout_height="match_parent"
                 android:padding="@dimen/cardview_compat_inset_shadow">
 
-                <de.hdodenhof.circleimageview.CircleImageView
+                <ImageView
                     xmlns:app="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/tr_acc_thumb"
                     android:layout_width="@dimen/msg_thumb_width"
                     android:layout_height="@dimen/msg_thumb_width"
                     android:src="@drawable/user_ava_man"
-                    app:civ_border_color="#FFf"
-                    app:civ_border_width="2dp"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_marginStart="@dimen/min_padding"
+                 />
 
 
                 <RelativeLayout
