--- a/app/src/main/res/layout/transaction_cancel.xml
+++ b/app/src/main/res/layout/transaction_cancel.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view_ongotransaksi"
+        android:id="@+id/card_view_cantransaksi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/xmin_padding"
@@ -29,7 +29,7 @@
                 android:background="@color/colorPrimarySoft">
 
                 <TextView
-                    android:id="@+id/tr_ongo_code_trans"
+                    android:id="@+id/tr_can_code_trans"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/xmin_padding"
@@ -39,7 +39,7 @@
                     android:textSize="@dimen/small_text" />
 
                 <TextView
-                    android:id="@+id/tr_ongo_nominal"
+                    android:id="@+id/tr_can_nominal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
@@ -58,15 +58,15 @@
                 android:layout_height="match_parent"
                 android:padding="@dimen/cardview_compat_inset_shadow">
 
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/tr_ongo_thumb"
+                <ImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/tr_can_thumb"
                     android:layout_width="@dimen/msg_thumb_width"
                     android:layout_height="@dimen/msg_thumb_width"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/xmin_padding"
                     android:src="@drawable/user_ava_man"
-                    app:civ_border_color="#FFf"
-                    app:civ_border_width="2dp" />
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/min_padding"
+                    />
 
 
                 <RelativeLayout
@@ -75,7 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_ongo_thumb"
+                    android:layout_toRightOf="@+id/tr_can_thumb"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -86,7 +86,7 @@
                         android:textSize="@dimen/tiny_text" />
 
                     <TextView
-                        android:id="@+id/tr_ongo_aset"
+                        android:id="@+id/tr_can_aset"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_aset_text"
@@ -101,7 +101,7 @@
                     android:layout_below="@+id/tr_aset_con"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_ongo_thumb"
+                    android:layout_toRightOf="@+id/tr_can_thumb"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -112,7 +112,7 @@
                         android:textSize="@dimen/tiny_text" />
 
                     <TextView
-                        android:id="@+id/tr_ongo_member"
+                        android:id="@+id/tr_can_member"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_member_name_text"
@@ -127,7 +127,7 @@
                     android:layout_below="@id/tr_member"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_ongo_thumb"
+                    android:layout_toRightOf="@+id/tr_can_thumb"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -139,7 +139,7 @@
 
 
                     <TextView
-                        android:id="@+id/tr_ongo_start_date"
+                        android:id="@+id/tr_can_start_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_start_date_t"
@@ -154,7 +154,7 @@
                     android:layout_below="@id/tr_waktu_sewa_start"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_ongo_thumb"
+                    android:layout_toRightOf="@+id/tr_can_thumb"
                     android:layout_marginBottom="@dimen/xmin_padding"
                     android:padding="@dimen/small_space">
 
@@ -167,7 +167,7 @@
 
 
                     <TextView
-                        android:id="@+id/tr_ongo_end_date"
+                        android:id="@+id/tr_can_end_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_end_date_t"
