--- a/app/src/main/res/layout/transaction_ongoing_view.xml
+++ b/app/src/main/res/layout/transaction_ongoing_view.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view_comptransaksi"
+        android:id="@+id/card_view_ongotransaksi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/xmin_padding"
@@ -29,7 +29,7 @@
                 android:background="@color/colorPrimarySoft">
 
                 <TextView
-                    android:id="@+id/tr_comp_code_trans"
+                    android:id="@+id/tr_ongo_code_trans"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/xmin_padding"
@@ -39,7 +39,7 @@
                     android:textSize="@dimen/small_text" />
 
                 <TextView
-                    android:id="@+id/tr_comp_nominal"
+                    android:id="@+id/tr_ongo_nominal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
@@ -58,16 +58,15 @@
                 android:layout_height="match_parent"
                 android:padding="@dimen/cardview_compat_inset_shadow">
 
-                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/tr_comp_thumb"
+                <ImageView
+                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/tr_ongo_thumb"
                     android:layout_width="@dimen/msg_thumb_width"
                     android:layout_height="@dimen/msg_thumb_width"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="@dimen/xmin_padding"
                     android:src="@drawable/user_ava_man"
-                    app:civ_border_color="#FFf"
-                    app:civ_border_width="2dp" />
-
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="@dimen/min_padding"
+                    />
 
                 <RelativeLayout
                     android:id="@+id/tr_aset_con"
@@ -75,7 +74,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_comp_thumb"
+                    android:layout_toRightOf="@+id/tr_ongo_thumb"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -86,7 +85,7 @@
                         android:textSize="@dimen/tiny_text" />
 
                     <TextView
-                        android:id="@+id/tr_comp_aset"
+                        android:id="@+id/tr_ongo_aset"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_aset_text"
@@ -101,7 +100,7 @@
                     android:layout_below="@+id/tr_aset_con"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_comp_thumb"
+                    android:layout_toRightOf="@+id/tr_ongo_thumb"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -112,7 +111,7 @@
                         android:textSize="@dimen/tiny_text" />
 
                     <TextView
-                        android:id="@+id/tr_comp_member"
+                        android:id="@+id/tr_ongo_member"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_member_name_text"
@@ -127,7 +126,7 @@
                     android:layout_below="@id/tr_member"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_comp_thumb"
+                    android:layout_toRightOf="@+id/tr_ongo_thumb"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -139,7 +138,7 @@
 
 
                     <TextView
-                        android:id="@+id/tr_comp_start_date"
+                        android:id="@+id/tr_ongo_start_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_start_date_t"
@@ -152,10 +151,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tr_waktu_sewa_start"
-                    android:layout_marginBottom="@dimen/xmin_padding"
                     android:layout_marginLeft="@dimen/min_padding"
                     android:layout_marginRight="@dimen/min_padding"
-                    android:layout_toRightOf="@+id/tr_comp_thumb"
+                    android:layout_toRightOf="@+id/tr_ongo_thumb"
+                    android:layout_marginBottom="@dimen/xmin_padding"
                     android:padding="@dimen/small_space">
 
                     <TextView
@@ -167,50 +166,13 @@
 
 
                     <TextView
-                        android:id="@+id/tr_comp_end_date"
+                        android:id="@+id/tr_ongo_end_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toRightOf="@+id/tr_end_date_t"
                         android:textSize="@dimen/tiny_text" />
 
                 </RelativeLayout>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/min_padding"
-                android:paddingStart="@dimen/min_padding"
-                >
-
-                <TextView
-                    android:id="@+id/testi_text"
-                    android:layout_width="@dimen/text_label"
-                    android:layout_height="wrap_content"
-                    android:text="Testimoni :"
-                    android:textStyle="bold"
-                    android:textSize="9sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/testi_text"
-                    android:text="Pelayanan oke"
-                    android:layout_marginStart="@dimen/min_padding"
-                    android:textSize="@dimen/tiny_text"/>
-
-                <com.iarcuschin.simpleratingbar.SimpleRatingBar
-                    android:id="@+id/tm_aset_rating"
-                    style="@style/CustomRatingBar"
-                    android:layout_width="75dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerHorizontal="false"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="@dimen/xmin_padding"
-                    app:srb_isIndicator="true"
-                    app:srb_rating="4.0" />
 
             </RelativeLayout>
 
