--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,6 +30,7 @@
     <dimen name="thumb_prop_width">18dp</dimen>
     <dimen name="thumb_prop_height">18dp</dimen>
     <dimen name="btn_thumb">45dp</dimen>
+    <dimen name="star_size">25dp</dimen>
 
     <dimen name="msg_thumb_width">64dp</dimen>
     <dimen name="msg_thumb_height">64dp</dimen>
