--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -295,7 +295,6 @@
                 </LinearLayout>
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -320,6 +319,33 @@
                     android:imeOptions="actionNext"
                     android:inputType="textMultiLine|textCapSentences"
                     android:lines="3"
+                    android:padding="@dimen/min_padding" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:orientation="vertical"
+                android:padding="@dimen/xmin_padding"
+                android:visibility="gone">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kode Pos"
+                    android:textColor="@color/colorBlack" />
+
+                <EditText
+                    android:id="@+id/epr_postal_code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorNearWhite"
+                    android:ems="10"
+                    android:hint="Kode Pos"
+                    android:imeOptions="actionNext"
+                    android:inputType="number"
+                    android:maxLength="5"
                     android:padding="@dimen/min_padding" />
             </LinearLayout>
 
