--- a/app/src/main/res/layout/content_form_edit_profil.xml
+++ b/app/src/main/res/layout/content_form_edit_profil.xml
@@ -197,11 +197,12 @@
                         android:id="@+id/epr_province"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="@dimen/xmin_padding"
-                        android:spinnerMode="dialog" />
+                        android:entries="@array/province_entries"
+                        android:padding="@dimen/xmin_padding" />
 
                 </LinearLayout>
             </LinearLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -228,8 +229,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:entries="@array/city_entries"
-                        android:padding="@dimen/xmin_padding"
-                        android:spinnerMode="dialog" />
+                        android:padding="@dimen/xmin_padding" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -239,7 +239,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:orientation="vertical"
-                android:padding="@dimen/xmin_padding">
+                android:padding="@dimen/xmin_padding"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -259,8 +260,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:entries="@array/city_entries"
-                        android:padding="@dimen/xmin_padding"
-                        android:spinnerMode="dialog" />
+                        android:padding="@dimen/xmin_padding" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -271,7 +271,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:orientation="vertical"
-                android:padding="@dimen/xmin_padding">
+                android:padding="@dimen/xmin_padding"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -291,8 +292,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:entries="@array/city_entries"
-                        android:padding="@dimen/xmin_padding"
-                        android:spinnerMode="dialog" />
+                        android:padding="@dimen/xmin_padding" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -330,7 +330,7 @@
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:orientation="vertical"
                 android:padding="@dimen/xmin_padding"
-                android:visibility="gone">
+                >
 
                 <TextView
                     android:layout_width="match_parent"
