- View Profile Member

--- a/app/src/main/res/layout/content_trans_detail.xml
+++ b/app/src/main/res/layout/content_trans_detail.xml
@@ -131,6 +131,8 @@
                                         android:id="@+id/detTrans_member"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
+                                        android:textColor="@color/colorPrimary"
+                                        android:clickable="true"
                                         android:layout_toRightOf="@+id/tr_member_name_text" />
 
                                 </RelativeLayout>
