--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,6 +31,8 @@
     <dimen name="thumb_prop_height">18dp</dimen>
     <dimen name="btn_thumb">45dp</dimen>
     <dimen name="star_size">25dp</dimen>
+    <dimen name="star_small">15dp</dimen>
+    <dimen name="files_image">45dp</dimen>
 
     <dimen name="msg_thumb_width">64dp</dimen>
     <dimen name="msg_thumb_height">64dp</dimen>
