--- a/app/src/main/res/layout/grid_aset_category.xml
+++ b/app/src/main/res/layout/grid_aset_category.xml
@@ -12,35 +12,57 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:paddingBottom="@dimen/xmin_padding"
             android:paddingLeft="@dimen/med_padding"
-            android:paddingRight="@dimen/med_padding"
+            android:paddingRight="@dimen/xmin_padding"
             android:paddingTop="@dimen/xmin_padding">
 
-            <ImageView
-                android:id="@+id/item_c_img"
-                android:layout_width="@dimen/msg_thumb_width"
-                android:layout_height="@dimen/msg_thumb_height"
-                android:layout_marginTop="@dimen/xmin_padding"
-                android:contentDescription="category image"
-                app:srcCompat="@android:drawable/ic_search_category_default" />
-
             <TextView
-                android:id="@+id/item_c_title"
+                android:id="@+id/item_c_sum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:textColor="@color/colorBlack"
+                android:gravity="center"
+                android:layout_alignParentEnd="true"
+                android:textSize="@dimen/almost_tiny_text"
+                android:background="@drawable/cirle_green_label"/>
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:lines="2"
-                android:padding="@dimen/xmin_padding"
-                android:text="Category"
-                android:textAlignment="center"
-                android:textSize="10sp" />
-        </LinearLayout>
+                android:layout_marginEnd="15dp">
+
+                <ImageView
+                    android:id="@+id/item_c_img"
+                    android:layout_width="@dimen/msg_thumb_width"
+                    android:layout_height="@dimen/msg_thumb_height"
+                    android:layout_marginTop="@dimen/xmin_padding"
+                    android:layout_centerHorizontal="true"
+                    android:contentDescription="category image"
+                    app:srcCompat="@android:drawable/ic_search_category_default" />
+
+                <TextView
+                    android:id="@+id/item_c_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:lines="2"
+                    android:padding="@dimen/xmin_padding"
+                    android:text="Category"
+                    android:textAlignment="center"
+                    android:textSize="10sp"
+                    android:layout_below="@+id/item_c_img"/>
+
+
+            </RelativeLayout>
+
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
